Working on home page

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       content="Kyle Wright's portfolio."
     />
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
+
     <title>Kyle Wright</title>
   </head>
   <body>
