--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
 
-    <title>Kyle Wright</title>
+    <title>Kyle Wright's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
